# yamagishi_medical_caption

./: .gitignore  README.md  pyproject.toml
notebooks/: make_cap_qa_mini.ipynb  make_mini_scale.ipynb  mask_csv.ipynb  review_cap_qa.ipynb  simple_eda.ipynb
scripts/: run_vqa.sh  run_vqa_v2.sh  run_vqa_v3.sh
src/: eval_vqa.py  make_cap_qa.py  make_cap_qa_old.py  text_only_inference.py  vqa_inference.py
