[project]
name = "surgery-vid"
version = "0.1.0"
description = "Generate caption/QA pairs from surgical video frames and benchmark VQA models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "av>=16.0.1",
    "einops>=0.8.1",
    "ffmpeg-python>=0.2.0",
    "imageio[ffmpeg]>=2.37.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.4.10",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.7",
    "moviepy>=2.2.1",
    "numpy>=1.26.4",
    "openai>=2.8.1",
    "opencv-python-headless>=4.11.0.86",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "plotly>=6.3.1",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "timm>=1.0.21",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.223",
]
